--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -456,6 +456,12 @@ config EXYNOS4_CPUFREQ
 	help
 	  Exynos4 cpufreq support
 
+config CPU_OVERCLOCK
+	bool "Enable CPU Overclocking option"
+	default n
+	help
+	  Exynos4 overclocking up to 1.80 GHz
+
 config EXYNOS5_CPUFREQ
 	def_bool y
 	depends on CPU_FREQ && ARCH_EXYNOS5
@@ -479,18 +485,6 @@ config EXYNOS4210_1400MHZ_SUPPORT
 	depends on EXYNOS4_CPUFREQ && CPU_EXYNOS4210
 	help
 	  Max 1.4Ghz support
-
-config EXYNOS4X12_1700MHZ_SUPPORT
-	bool "Max 1700MHz CPUFREQ LEVEL"
-	depends on EXYNOS4_CPUFREQ && (CPU_EXYNOS4212 || CPU_EXYNOS4412)
-	help
-	  Max 1.7Ghz support
-
-config EXYNOS4X12_1600MHZ_SUPPORT
-	bool "Max 1500MHz CPUFREQ LEVEL"
-	depends on EXYNOS4_CPUFREQ && (CPU_EXYNOS4212 || CPU_EXYNOS4412)
-	help
-	  Max 1.6Ghz support
 
 config EXYNOS4X12_1500MHZ_SUPPORT
 	bool "Max 1500MHz CPUFREQ LEVEL"
@@ -644,6 +638,15 @@ config SEC_THERMISTOR
 	 Use thermistor driver for U1 & U1 Premium.
 	 U1 has two thermistors. this device driver use one of those
 	 to check system temperature.
+
+config SEC_SUBTHERMISTOR
+	bool "Use sub thermistor"
+	depends on SAMSUNG_DEV_ADC
+	default n
+	help
+	  Use sub thermistor driver.
+	  This device driver use only Japan model.
+	  Japan model has sub thermistors.
 
 config EXYNOS_SYSREG_PM
 	bool "PM Support for System Registers"
@@ -884,9 +887,8 @@ config MACH_Q1_BD
 
 endchoice
 config TARGET_LOCALE_NAATT_TEMP
-    bool "Support North America GSM ATT Board"
-	depends on MACH_U1
-    default n
+        bool "Support North America GSM ATT Board"
+        default n
 
 config MACH_PX
 	bool "PX board"
@@ -968,7 +970,7 @@ config PANEL_U1_NA_SPR
 
 endchoice
 
-if MACH_U1 || MACH_C1 || MACH_M3 || MACH_M0 || MACH_P4 || MACH_P2 || MACH_P4NOTE || MACH_T0 || MACH_TRATS || MACH_GRANDE || MACH_GC1 || MACH_BAFFIN || MACH_KONA
+if MACH_U1 || MACH_C1 || MACH_M3 || MACH_M0 || MACH_P4 || MACH_P2 || MACH_P4NOTE || MACH_T0 || MACH_TRATS || MACH_GRANDE || MACH_GC1 || MACH_BAFFIN
 source "arch/arm/mach-exynos/Kconfig.local"
 endif
 
@@ -1102,11 +1104,6 @@ config MACH_T0
 	select S3C_DEV_I2C4
 	select S3C_DEV_I2C5
 
-config MACH_KONA
-        bool "KONA Note8 board"
-        select S3C_DEV_I2C4
-        select S3C_DEV_I2C5
-
 config MACH_IRON
 	bool "Iron board"
 	select S3C_DEV_I2C4
@@ -1146,14 +1143,6 @@ config T0_04_BD
 	bool "T0 Revison 04 board"
 	default n
 
-config KONA_00_BD
-        bool "KONA note8 rev00 common Board"
-        default n
-
-config KONA_01_BD
-        bool "KONA note8 rev01 common Board"
-        default n
-
 config IRON_BD
 	bool "Iron common Board"
 
@@ -1176,9 +1165,6 @@ config JACK_FET
 
 config JACK_GROUND_DET
 	bool "Ear Ground Detection Enable"
-
-config USE_ADC_DET
-        bool "Jack Detection with ADC IC"
 
 config SAMSUNG_ANALOG_UART_SWITCH
 	int "SAMSUNG analog switch for UART"
@@ -1627,16 +1613,6 @@ config EHCI_IRQ_DISTRIBUTION
 	bool "ehci irq distribution"
 	default n
 
-if (LINK_DEVICE_USB || LINK_DEVICE_HSIC)
-config EHCI_MODEM_PORTNUM
-        int "EHCI port number of modem connection"
-        default 2
-config CMC_MODEM_HSIC_SYSREV
-        int "System revision number which CMC modem support HSIC i/f"
-        depends on LTE_MODEM_CMC221
-        default 9
-endif
-
 if SEC_MODEM
 comment "Samsung Modem Feature"
 
@@ -1817,9 +1793,10 @@ config MDM_HSIC_PM
 config EMI_ERROR_RECOVERY
 	bool "unsuspected emi error recovery on HUB"
 	default n
+
 config SIM_DETECT
 	bool "support sim detect"
-        default n
+	default n
 
 if QC_MODEM
 choice
@@ -1861,19 +1838,18 @@ config CORESIGHT_ETM_DEFAULT_ENABLE
 	  Turns on ETM tracing by default. Otherwise, tracing is
 	  disabled by default but can be enabled by other means.
 
+config CPU_FREQ_TETHERING
+	bool "Lock cpu freq & bus clock when tethering mode turn on"
+	depends on QC_MODEM
+	default n
 
-config MACH_KONA_SENSOR
-        bool "KONA Sensor Enable"
-        help
-          Support sensors of KONA boards
-
-          BMA254 / BOSCH
-          YAS532 / YAMAHA
-          GP2A030A / SHARP
-
-config CHARGE_LEVEL
-	bool "Charge level interface"
-	depends on BATTERY_MAX77693_CHARGER && BATTERY_SAMSUNG
-	default y
+config INTELLI_PLUG
+	bool "Enable intelli-plug cpu hotplug driver"
+	default n
 	help
-	  Allows configuration of ac and usb charging levels
+	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
+
+config ABB_CONTROL
+	bool "Adaptive body bias control"
+	depends on EXYNOS4_CPUFREQ && CPU_EXYNOS4412
+	default y
